--- a/app/css/klarna-theme.css
+++ b/app/css/klarna-theme.css
@@ -21,13 +21,44 @@ body {
 #container1 {
   border: none; }
   #container1 #container2 {
-    background-color: rgba(128, 128, 128, 0.6); }
+    background-color: rgba(128, 128, 128, 0.6);
+    border-color: #269abc; }
+    #container1 #container2.active {
+      border-color: #000; }
     #container1 #container2 .box {
-      border-radius: 12px; }
+      border-radius: 12px;
+      border-color: #CCC; }
+      #container1 #container2 .box:hover {
+        border-color: #000; }
       #container1 #container2 .box .box-header {
-        border-bottom: 1px solid #999; }
-      #container1 #container2 .box .box.second .box-header {
-        border-bottom: 1px solid #0F0; }
+        border-bottom: 1px solid #CCC; }
+    #container1 #container2 .box.second {
+      color: #fff;
+      background-color: #d9534f;
+      border-color: #d43f3a; }
+      #container1 #container2 .box.second:hover {
+        background-color: #c9302c;
+        border-color: #000; }
+      #container1 #container2 .box.second .box-header {
+        border-bottom: 1px solid #d43f3a; }
+    #container1 #container2 .box.third {
+      color: #fff;
+      background-color: #5cb85c;
+      border-color: #398439; }
+      #container1 #container2 .box.third:hover {
+        background-color: #449d44;
+        border-color: #000; }
+      #container1 #container2 .box.third .box-header {
+        border-bottom: 1px solid #398439; }
+    #container1 #container2 .box.fourth {
+      color: #fff;
+      background-color: #5bc0de;
+      border-color: #269abc; }
+      #container1 #container2 .box.fourth:hover {
+        background-color: #31b0d5;
+        border-color: #000; }
+      #container1 #container2 .box.fourth .box-header {
+        border-bottom: 1px solid #31b0d5; }
 
 .statistics {
   width: 100%;
@@ -60,8 +91,8 @@ button {
   border: 1px solid transparent;
   border-radius: 4px;
   color: #fff;
-  background-color: #0074c9;
-  border-color: #46b8da; }
+  background-color: #5bc0de;
+  border-color: #269abc; }
 
 .clear-button {
   float: right; }
