--- a/src/sass/klarna-theme.scss
+++ b/src/sass/klarna-theme.scss
@@ -74,47 +74,47 @@ body {
       .box-header {
         border-bottom: 1px solid $default-border; 
       }
-    }
 
-    .box.second {
-      color: #fff;
-      background-color: $bg-danger;
-      border-color: $border-danger;
-      &:hover {
-        background-color: $bg-danger-hover;
-        border-color: $strong-border;
+      &.second {
+        color: #fff;
+        background-color: $bg-danger;
+        border-color: $border-danger;
+        &:hover {
+          background-color: $bg-danger-hover;
+          border-color: $strong-border;
+        }
+
+        .box-header {
+          border-bottom: 1px solid $border-danger; 
+        }
       }
 
-      .box-header {
-        border-bottom: 1px solid $border-danger; 
-      }
-    }
+      &.third {
+        color: #fff;
+        background-color: $bg-success;
+        border-color: $border-success;
+        &:hover {
+          background-color: $bg-success-hover;
+          border-color: $strong-border;
+        }
 
-    .box.third {
-      color: #fff;
-      background-color: $bg-success;
-      border-color: $border-success;
-      &:hover {
-        background-color: $bg-success-hover;
-        border-color: $strong-border;
-      }
-
-      .box-header {
-        border-bottom: 1px solid $border-success; 
-      }
-    }
-
-    .box.fourth {
-      color: #fff;
-      background-color: $bg-primary;
-      border-color: $border-primary;
-      &:hover {
-        background-color: $bg-primary-hover;
-        border-color: $strong-border;
+        .box-header {
+          border-bottom: 1px solid $border-success; 
+        }
       }
 
-      .box-header {
-        border-bottom: 1px solid $bg-primary-hover; 
+      &.fourth {
+        color: #fff;
+        background-color: $bg-primary;
+        border-color: $border-primary;
+        &:hover {
+          background-color: $bg-primary-hover;
+          border-color: $strong-border;
+        }
+
+        .box-header {
+          border-bottom: 1px solid $bg-primary-hover; 
+        }
       }
     }
   }
