--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,7 +1,7 @@
 html, body, #layout {
   width: 100%;
   height: 100%;
-  margin: 0px;
+  margin: 0;
 }
 
 /* 
@@ -31,20 +31,20 @@ defined.
 }
 
 .row {
-  padding: 20px 0px;
+  padding: 20px 0;
 }
 
 .row.first {
-  padding-top: 0px;
+  padding-top: 0;
 }
 
 .row.last {
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 .row .col {
   display: inline-block;
-  padding: 0px 20px;
+  padding: 0 20px;
 }
 
 .row.one-third .col {
@@ -126,7 +126,7 @@ span.right {
 
 .box:hover {
   border: 5px solid #000; 
-  padding: 0px;
+  padding: 0;
 }
 
 .box:hover .box-header, .box:hover .box-content {
@@ -141,6 +141,6 @@ span.right {
   }
 
   .row .col {
-    padding: 0px 14px;
+    padding: 0 14px;
   }
 }
